# webjvm

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: rust.yml
crates/classfile-parser/src/: lib.rs
crates/classfile-parser/src/attribute_info/: mod.rs  parser.rs  types.rs
crates/classfile-parser/src/code_attribute/: parser.rs
crates/classfile-parser/src/constant_info/: parser.rs
crates/classfile-parser/tests/: attr_bootstrap_methods.rs  attr_stack_map_table.rs  classfile.rs  code_attribute.rs
java/: make.bat
java/webjvm/io/: ConsoleOutputStream.java
src/: exec.rs  java.rs  lib.rs  model.rs  util.rs
src/exec/: env.rs  interpreter.rs  jvm.rs  mod.rs
src/exec/interpreter/: mod.rs
src/exec/interpreter/instructions/: array.rs  constant.rs  control_flow.rs  field.rs  fields.rs  invoke.rs  load.rs  math.rs  misc.rs  mod.rs  (+3 more)
src/native/: Class.rs  Object.rs  System.rs  Unsafe.rs  java_io_FileDescriptor.rs  java_io_FileInputStream.rs  java_io_FileOutputStream.rs  java_io_UnixFileSystem.rs  java_lang_Class.rs  java_lang_ClassLoader.rs  java_lang_Double.rs  java_lang_Float.rs  java_lang_Object.rs  java_lang_Runtime.rs  java_lang_String.rs  java_lang_System.rs  java_lang_Thread.rs  java_lang_Throwable.rs  java_lang_reflect_Array.rs  java_security_AccessController.rs  java_util_concurrent_atomic_AtomicLong.rs  mod.rs  sun_misc_Signal.rs  sun_misc_URLClassPath.rs  sun_misc_Unsafe.rs  sun_misc_VM.rs  sun_reflect_NativeConstructorAccessorImpl.rs  sun_reflect_Reflection.rs
test/: index.html
test/java/: MainTest.java
