[package]
name = "webjvm"
version = "0.1.0"
authors = ["Lucas Baizer <lucas.baizer@telaeris.com>"]
edition = "2018"

[dependencies]
classfile-parser = { path = "../classfile-parser" }
wasm-bindgen = "0.2"
js-sys = "0.3.51"
web-sys = { version = "0.3.51", features = ["console"] }
console_error_panic_hook = "0.1.6"
zip = { version = "0.5.13", default-features = false, features = ["deflate"] }
lazy_static = "1.4.0"
paste = "1.0.5"

[lib]
crate-type = ["cdylib", "rlib"]
